addDataBySerialNumber added
