# api/swagger/swagger.yaml
@@ -1030,11 +1030,44 @@ paths:
     post:
       tags:
       - data
-      description:  Add Data by device id and timestamp
+      description:  Add Data by device's name, ApiKey, and timestamp
       # used as the method name of the controller
       operationId: addDataByDeviceName
       parameters:
       - name: DeviceName
+        in: query
+        type: string
+      - name: body
+        in: body
+        required: true
+        schema: 
+          properties:
+            Data:
+            # type: object
+              #items: 
+              $ref: '#/definitions/AddDataByVarNameModel'
+            Timestamp:
+              type: integer
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /data/addDataBySerialNumber:
+    x-swagger-router-controller: dataManage
+    post:
+      tags:
+      - data
+      description:  Add Data by serial number of the device and timestamp
+      # used as the method name of the controller
+      operationId: addDataBySerialNumber
+      parameters:
+      - name: SerialNumber
         in: query
         type: string
       - name: body
